# tgmock

./: .mcp.json  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
skills/setup/: SKILL.md
skills/test/: SKILL.md
tests/: test_tgmock.py
tgmock/: __init__.py  _autopatch.py  _config.py  _user_id.py  cli.py  client.py  mcp_server.py  plugin.py  server.py
